--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,3 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> HTML , CSS , Javascript , PHP, Python3.X</p>
+<p> C, C++, Java, Office, Google Docs, BBDD </p>
+<p> MySQL, DQL, Windows, UNIX </p>
