--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,26 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
+<figure>
+    <embed src="https://wakatime.com/share/@Hector290601/45d04b55-9a27-4ac0-962e-3fa73aa329b0.svg"></embed>
+</figure>
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
+    <embed src="https://wakatime.com/share/@Hector290601/36562358-78fd-466b-b87c-c7102feace5f.svg"></embed>
+</figure>
+
+<!-- Editors -->
+<figure>
+    <embed src="https://wakatime.com/share/@Hector290601/d50c10e6-dcc7-4513-a003-868823ca0421.svg"></embed>
+</figure>
+
+<!-- OS -->
+<figure>
+    <embed src="https://wakatime.com/share/@Hector290601/580eb22f-3c14-4a9f-92bc-986c19e7c27f.svg"></embed>
+</figure>
+
+<!-- Categories -->
+<figure>
+    <embed src="https://wakatime.com/share/@Hector290601/e377ae11-22a7-4a66-b9e7-cbb0cd06fdac.svg"></embed>
 </figure>
