--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,1 +1,11 @@
 <!-- Add Google Adsense Ad Code here-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-7632405935711032"
+     data-ad-slot="1496018458"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
